# hasznalt

./: .gitignore  Cargo.toml  README.md  diesel.toml  rebuild_schema.sh
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  schema.rs
client/: Cargo.toml  index.html  styles.css
client/--src-tauri/: tauri.conf.json
client/src/: app.rs  lib.rs  main.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: app.rs  lib.rs  main.rs
migrations/2024-10-06-090252_accounts/: up.sql
migrations/2024-10-10-204022_authorized_cookies/: down.sql  up.sql
migrations/2024-10-11-144602_authorized_users/: down.sql  up.sql
server/: Cargo.toml
server/src/: main.rs
src-tauri/: Cargo.toml
src/client/: app.rs
