[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
diesel = {version = "2.2.4", features = ["postgres", "chrono"] }
dotenvy = "0.15"
axum = {version = "0.7.5", features = ["http2", "ws"]}
tokio = {version = "1.40.0", features = ["full"]}
anyhow = "1.0.89"
tower-http = {version = "0.6.1", features = ["full"]}
reqwest = "0.12.7"
yew-router = "0.18.0"
tower = "0.5.1"
openssl-sys = { version = "0.9.103", features = ["vendored"] } 
pq-sys = { version = "0.6.3", features = ["bundled"] }
serde_json = "1.0.128"
chrono = {version = "0.4.38", features = ["serde"]}
argon2 = "0.5.3"
axum-extra = {version = "0.9.4", features = ["cookie", "cookie-private", "cookie-signed"]}
uuid = {version = "1.10.0", features = ["v7"]}
