[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
dotenvy = "0.15"
tokio = {version = "1.40.0", features = ["rt", "macros"]}
web-sys = {version = "0.3.70", features = ["HtmlDocument"]}
js-sys = "0.3.70"
reqwest = "0.12.7"
yew-router = "0.18.0"
serde_json = "1.0.128"
chrono = {version = "0.4.38", features = ["serde"]}
wasm-cookies = "0.2.1"

