[package]
name = "hasznalt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr", "ssr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
diesel = {version = "2.2.4", features = ["postgres"] }
dotenvy = "0.15"
axum = {version = "0.7.5", features = ["http2", "ws"]}
tokio = {version = "1.40.0", features = ["full"]}
anyhow = "1.0.89"
